# goit-ds-hw-01

./: Dockerfile  README.md  addressbook.pkl  bot_entities.py  main.py  pyproject.toml  serialization.py
