[project]
name = "goit-ds-hw-01"
version = "0.1.0"
description = ""
authors = [
    {name = "anastasiapolakova",email = "poliakova0401@gmail.com"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "colorama (==0.4.6)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"

